[package]
name = "geode_marketplace"
description = "This contract lets users buy and sell products (digital and physical) and services (online and in person) in the Geode ecosystem. "
version = "0.1.0"
authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["reentrancy_guard"] }

[lib]
name = "geode_marketplace"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info",
  "scale-info/std",
  "openbrush/std",
]

ink-as-dependency = []
