[package]
name = "geode_marketplace"
description = "This contract lets users buy and sell products (digital and physical) and services (online and in person) in the Geode ecosystem. "
version = "0.2.0"
authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
]

ink-as-dependency = []


